# idk

./: README.md
Born2beRoot/: README.md  signature.txt
Data_Archivist/: sample_data.json
Data_Deck/: battle.py  capacitor.py  tournament.py
Data_Quest/: ft_coordinate_system.py
Garden_Guardian/: ft_garden_management.py
Libc/: Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_toupper.c  libft.h  testsplit.c
The_Codex/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_circular_curse.py  ft_distillation_0.py  ft_distillation_1.py  ft_import_transmutation.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_pathway_debate.py  ft_sacred_scroll.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
The_Matrix/ex1/: loading.py  pyproject.toml  requirements.txt
get_next_line/: README.md  a.out  get_next_line.c  get_next_line.h  get_next_line_utils.c  test.txt
libft/: README.md
printf/: Makefile  README.md  ft_printf.c  ft_printf.h  hex_number.c  unsigned_number.c
push_swap/: .pa_pb.c.swp  .push_swap.h.swp  .str_err.c.swp  Makefile  Medium_sort.c  README.md  (+25 more)
(+106 files in other folders)
