[tool.poetry]
name = "ex1-matrix-loader"
version = "0.1.0"
description = "Matrix data analysis"
authors = ["Yazeed <yazeedbarakat731@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dependencies = [
"pandas (3.0.2)",
"numpy (2.4.4)",
"matplotlib (3.10.9)",
"requests (2.33.1)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
